# MDataStructures

./: AlienTank.h  AttackTank.h  CMakeLists.txt  DefenseTank.h  FutureTank.h  IRace.h  ITank.h  InfantryTank.h  LBT.cpp  LBT.h  MBT.h  Platoon.cpp  Platoon.h  README.md  ScoutTank.h  TankFactory.cpp  TankFactory.h  main.cpp  tests.cpp
.github/workflows/: cmake-single-platform.yml
